// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/list/demo/basic.md correctly 1`] = `
<div
  class="m-list"
>
  <div
    class="m-list-header"
  >
    <div
      class="m-list-title"
    >
      标题
    </div>
    <div
      class="m-list-extra"
    >
      <i
        class="m-icon m-icon-plus-circle"
      >
        <i
          class="m-icon"
        >
          <svg
            aria-hidden="true"
            class=""
            fill="currentColor"
            height="1em"
            width="1em"
          >
            <use
              href="#icon-plus-circle"
            />
          </svg>
        </i>
      </i>
    </div>
  </div>
  <div
    class="m-list-body"
  >
    <div
      class="m-list-item m-list-item-right"
    >
      <div
        class="m-list-item-inner"
      >
        <div
          class="m-list-item-label"
        >
          <div
            class="m-list-item-title"
          >
            普通列表
          </div>
        </div>
        <div
          class="m-list-item-content"
        />
      </div>
    </div>
    <div
      class="m-list-item m-list-item-has-arrow m-list-item-right"
    >
      <div
        class="m-list-item-inner"
      >
        <div
          class="m-list-item-label"
        >
          <div
            class="m-list-item-title"
          >
            动作列表
          </div>
        </div>
        <div
          class="m-list-item-content"
        />
        <div
          aria-hidden="true"
          class="m-list-item-arrow m-list-item-arrow-right"
        >
          <i
            class="m-icon m-icon-right"
          >
            <i
              class="m-icon"
            >
              <svg
                aria-hidden="true"
                class=""
                fill="currentColor"
                height="1em"
                width="1em"
              >
                <use
                  href="#icon-right"
                />
              </svg>
            </i>
          </i>
        </div>
      </div>
    </div>
    <div
      class="m-list-item m-list-item-has-arrow m-list-item-disabled m-list-item-right"
    >
      <div
        class="m-list-item-inner"
      >
        <div
          class="m-list-item-label"
        >
          <div
            class="m-list-item-title"
          >
            禁用列表
          </div>
        </div>
        <div
          class="m-list-item-content"
        />
        <div
          aria-hidden="true"
          class="m-list-item-arrow m-list-item-arrow-right"
        >
          <i
            class="m-icon m-icon-right"
          >
            <i
              class="m-icon"
            >
              <svg
                aria-hidden="true"
                class=""
                fill="currentColor"
                height="1em"
                width="1em"
              >
                <use
                  href="#icon-right"
                />
              </svg>
            </i>
          </i>
        </div>
      </div>
    </div>
    <div
      class="m-list-item m-list-item-has-arrow m-list-item-right"
    >
      <div
        class="m-list-item-inner"
      >
        <div
          class="m-list-item-label"
        >
          <div
            class="m-list-item-title"
          >
            标题
          </div>
          <div
            class="m-list-item-brief"
          >
            展示摘要描述
          </div>
        </div>
        <div
          class="m-list-item-content"
        />
        <div
          aria-hidden="true"
          class="m-list-item-arrow m-list-item-arrow-right"
        >
          <i
            class="m-icon m-icon-right"
          >
            <i
              class="m-icon"
            >
              <svg
                aria-hidden="true"
                class=""
                fill="currentColor"
                height="1em"
                width="1em"
              >
                <use
                  href="#icon-right"
                />
              </svg>
            </i>
          </i>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/list/demo/content.md correctly 1`] = `
<div
  class="m-list"
>
  <div
    class="m-list-body"
  >
    <div
      class="m-list-item m-list-item-has-arrow m-list-item-left"
    >
      <div
        class="m-list-item-inner"
      >
        <div
          class="m-list-item-label m-list-item-label-solid"
        >
          <div
            class="m-list-item-title"
          >
            短标题
          </div>
        </div>
        <div
          class="m-list-item-content"
        >
          内容靠左展示
        </div>
        <div
          aria-hidden="true"
          class="m-list-item-arrow m-list-item-arrow-up"
        >
          <i
            class="m-icon m-icon-right"
          >
            <i
              class="m-icon"
            >
              <svg
                aria-hidden="true"
                class=""
                fill="currentColor"
                height="1em"
                width="1em"
              >
                <use
                  href="#icon-right"
                />
              </svg>
            </i>
          </i>
        </div>
      </div>
    </div>
    <div
      class="m-list-item m-list-item-has-arrow m-list-item-center"
    >
      <div
        class="m-list-item-inner"
      >
        <div
          class="m-list-item-label"
        >
          <div
            class="m-list-item-title"
          >
            标题宽度不固定
          </div>
        </div>
        <div
          class="m-list-item-content"
        >
          内容居中展示
        </div>
        <div
          aria-hidden="true"
          class="m-list-item-arrow m-list-item-arrow-down"
        >
          <i
            class="m-icon m-icon-right"
          >
            <i
              class="m-icon"
            >
              <svg
                aria-hidden="true"
                class=""
                fill="currentColor"
                height="1em"
                width="1em"
              >
                <use
                  href="#icon-right"
                />
              </svg>
            </i>
          </i>
        </div>
      </div>
    </div>
    <div
      class="m-list-item m-list-item-has-arrow m-list-item-right"
    >
      <div
        class="m-list-item-inner"
      >
        <div
          class="m-list-item-label m-list-item-label-solid"
        >
          <div
            class="m-list-item-title"
          >
            标题宽度固定
          </div>
        </div>
        <div
          class="m-list-item-content"
        >
          内容靠右展示
        </div>
        <div
          aria-hidden="true"
          class="m-list-item-arrow m-list-item-arrow-right"
        >
          <i
            class="m-icon m-icon-right"
          >
            <i
              class="m-icon"
            >
              <svg
                aria-hidden="true"
                class=""
                fill="currentColor"
                height="1em"
                width="1em"
              >
                <use
                  href="#icon-right"
                />
              </svg>
            </i>
          </i>
        </div>
      </div>
    </div>
    <div
      class="m-list-item m-list-item-has-arrow m-list-item-right"
    >
      <div
        class="m-list-item-inner"
      >
        <div
          class="m-list-item-extra"
        >
          <i
            class="m-icon m-icon-info-circle"
          >
            <i
              class="m-icon"
            >
              <svg
                aria-hidden="true"
                class=""
                fill="currentColor"
                height="1em"
                width="1em"
              >
                <use
                  href="#icon-info-circle"
                />
              </svg>
            </i>
          </i>
        </div>
        <div
          class="m-list-item-label"
        >
          <div
            class="m-list-item-title"
          >
            图标标题
          </div>
        </div>
        <div
          class="m-list-item-content"
        >
          内容展示
        </div>
        <div
          aria-hidden="true"
          class="m-list-item-arrow m-list-item-arrow-right"
        >
          <i
            class="m-icon m-icon-right"
          >
            <i
              class="m-icon"
            >
              <svg
                aria-hidden="true"
                class=""
                fill="currentColor"
                height="1em"
                width="1em"
              >
                <use
                  href="#icon-right"
                />
              </svg>
            </i>
          </i>
        </div>
      </div>
    </div>
  </div>
</div>
`;
